# remote-ops-mcp

./: .gitignore  Cargo.toml  LICENSE  README.md  config.example.toml
.github/workflows/: ci.yml  release.yml
docs/: remote-ops-mcp-plan.md
src/: app.rs  lib.rs  main.rs
src/config/: mod.rs  model.rs
src/error/: kind.rs  mod.rs  redact.rs
src/job/: cursor.rs  manager.rs  mod.rs  output.rs  state.rs
src/mcp/: mod.rs  result.rs  service.rs  tools.rs
src/runner/: file_sync.rs  mod.rs  process.rs  ssh.rs
src/session/: manager.rs  mod.rs  shell.rs
tests/: mcp_smoke.rs
