[package]
name = "remote-ops-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { version = "0.16", features = ["server", "macros", "schemars", "transport-io"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "time", "sync", "signal", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = { version = "1", features = ["derive"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
clap = { version = "4", features = ["derive", "env"] }
toml = "0.9"
uuid = { version = "1", features = ["v7", "serde"] }

[dev-dependencies]
rmcp = { version = "0.16", features = ["client", "transport-child-process"] }
